--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
                     <a href="https://x.com/ezraabhi?t=d9vWM8UgkOQWOpDRpDF9tw&s=08"><i class="fa-brands fa-square-twitter"></i></a>
                     <a href="https://www.instagram.com/ezra_abraham_ankani/"><i class="fa-brands fa-square-instagram"></i></a>
                 </div>
-                    <a href="./EA_resumea.docx" download class="btn btn2">Download CV</a>
+                    <a href="./EA_resumea.docx" download class="btn btn2">Download Resume</a>
                 </div>
             <div class="contact-right">
                 <form name="submit-to-google-sheet">
