--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                 <i class="fa-brands fa-java" class="icons"></i>
                 <h2>Java Develop</h2>
                 <p> Writing a programs on java and performing code re-usability building a logics 
-                    as i can decrease the code.designing as few implementation dependencies as per customer requirements.
+                    as i can decrease the code. Making few implementation dependencies as per customer requirements.
                 </p>
                     <a href="#">Learn More</a>
             </div>
