--- a/index.html
+++ b/index.html
@@ -111,6 +111,12 @@
                 </p>
                     <a href="#">Learn More</a>
             </div>
+            <div>
+                <i class="fa-brands fa-react"></i>
+                <2>React</2>
+                <p> Developing a web sites using react, create dynamic user interface components on websites and apps without 
+                    requiring page reloads. Developing the React projects used in web and mobile development.</p>
+            </div>
         </div>
     </div>
 </div>
