--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
             </div>
             <div>
                 <i class="fa-brands fa-react"></i>
-                <2>React</2>
+                <h2>React</h2>
                 <p> Developing a web sites using react, create dynamic user interface components on websites and apps without 
                     requiring page reloads. Developing the React projects used in web and mobile development.</p>
             </div>
