--- a/index.html
+++ b/index.html
@@ -66,14 +66,14 @@
                     </div>
                     <div class="tab-contents" id="education">
                         <ul>
-                            <li><span>2020 - 2023</span><br> BACHELOR OF TECHNOLOGY
+                            <li><span>2020 - 2023</span><br> <h3>BACHELOR OF TECHNOLOGY</h3>
                                 <br> Swarnandhra Collage Of Engineering and Technology Narsapuram<br>
                                 Computer Scince and Engineering <br> CGPA : 7.21</li>
-                            <li><span>2017 - 2020</span><br>POLYTECHNIC <br>
+                            <li><span>2017 - 2020</span><br> <h3> POLYTECHNIC </h3> <br>
                                 A.A.N.M & V.V.R.S.R Polytechnic Collage Gudlavalleru<br> 
                                 Computer Engineering <br> Percentage : 68.02%
                                 </li>
-                            <li><span>2016 - 2017</span>10TH <br>J BEERA E.M SCHOOL <br> GPA : 6.5</li>
+                            <li><span>2016 - 2017</span> <br> <h3> 10TH </h3> <br>J BEERA E.M SCHOOL <br> GPA : 6.5</li>
                         </ul>
                     </div>  
                 </div>
