--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
         </div>
     </div>
     <div class="copyright">
-        <p>Copyright <i class="fa-sharp fa-regular fa-copyright"></i> Ezra. Made with <i class="fa-solid fa-heart"></i> by easy Tutorials</p>
+        <p>Copyright <i class="fa-sharp fa-regular fa-copyright"></i> Ezra. Made by <i class="fa-solid fa-heart"></i> Ezra Abraham Ankani</p>
     </div>
 </div>
 
